Added GOV.UK Design System styling and components to layout view for GC.

--- a/LicenseeRecords.Web/Views/Home/Index.cshtml
+++ b/LicenseeRecords.Web/Views/Home/Index.cshtml
@@ -2,7 +2,20 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="govuk-grid-row">
+
+    <div class="govuk-grid-column-two-thirds">
+
+        <h1 class="govuk-heading-xl">Default page template</h1>
+        <p class="govuk-body">This is a paragraph inside a two-thirds wide column</p>
+              
+    </div>
+
+    <div class="govuk-grid-column-one-third">
+
+        <h2 class="govuk-heading-m">One-third column</h2>
+        <p class="govuk-body">This is a paragraph inside a one-third wide column</p>
+
+    </div>
+
 </div>
