--- a/LicenseeRecords.Web/Views/_ViewImports.cshtml
+++ b/LicenseeRecords.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using LicenseeRecords.Web
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@namespace LicenseeRecords.Web
 @using LicenseeRecords.Web.Models
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
